--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -10,6 +10,11 @@
 #  remember_created_at    :datetime
 #  created_at             :datetime         not null
 #  updated_at             :datetime         not null
+#  first_name             :string
+#  last_name              :string
+#  cpf                    :string
+#  matricula              :string
+#  category               :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
