--- a/config/database.yml
+++ b/config/database.yml
@@ -80,6 +80,7 @@ test:
 #
 production:
   <<: *default
-  database: SemanaAcademica_production
-  username: SemanaAcademica
-  password: <%= ENV['SEMANAACADEMICA_DATABASE_PASSWORD'] %>
+  database: <%= ENV['DATABASE_NAME'] %>
+  username: <%= ENV['DATABASE_USERNAME'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  host: <%= ENV['DATABASE_HOST'] %>
