--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "jquery-mask-plugin": "^1.14.15",
     "jquery.nicescroll": "^3.7.6",
+    "scroll-out": "^2.2.4",
     "sweetalert2": "^7.28.11"
   }
 }
